--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "account": "node scripts/createAccounts.js",
+    "deploy": "npx hardhat run scripts/deploy.js --network hardhat",
+    "test": "npx hardhat test",
+    "clean": "npx hardhat clean",
+    "compile": "npx hardhat compile"
   },
   "keywords": [],
   "author": "Akihiro Watanabe",
