--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "account": "node scripts/createAccounts.js",
-    "deploy": "npx hardhat run scripts/deploy.js --network hardhat",
+    "deploy": "npx hardhat run scripts/deploy.js --network amoy",
     "test": "npx hardhat test",
     "clean": "npx hardhat clean",
     "compile": "npx hardhat compile"
