--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@mui/system": "^5.16.7",
+    "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
