--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,9 @@
     "@mui/material": "^5.16.7",
     "@mui/system": "^5.16.7",
     "dotenv": "^16.4.5",
-    "ethers": "^6.13.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "web3": "^4.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
